Se agrega texxt wrap a los items del ion-select para mejorar la apariencia visual. Tambien se agrega extension dinamica de la imagen para mostrar correctamente en el modal de imagen

--- a/src/global.scss
+++ b/src/global.scss
@@ -70,14 +70,14 @@
     white-space: normal !important; 
 } */
 
-.sc-ion-alert-ios{
-    white-space: normal !important; 
-    padding-top: 2px;
+.alert-radio-label.sc-ion-alert-md,
+.alert-radio-label.sc-ion-alert-ios{
+    white-space: normal !important;
 }
 
-.sc-ion-alert-md{
-    white-space: normal !important;
-    padding-top: 2px;
+.alert-tappable.alert-radio{
+    height: auto;
+    contain: content;
 }
 
 ion-loading.custom-loading {
